unpackaged/main/default/objects/Account/fields/phoneNumber__c.field-meta.xml
<CustomField>
    <fullName>phoneNumber__c</fullName>
    <defaultValue>&#39;+91&#39;</defaultValue>
    <label>phoneNumber</label>
    <type>Phone</type>
</CustomField>