unpackaged/main/default/objects/Account/fields/Testing_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Testing_Picklist__c</fullName>
    <label>Testing Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Testing_Stage</valueSetName>
    </valueSet>
</CustomField>