unpackaged/main/default/objects/Account/fields/TotalAmountOfOpportunity__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfOpportunity__c</fullName>
    <label>TotalAmountOfOpportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>