unpackaged/main/default/objects/Account/recordTypes/again.recordType-meta.xml
<RecordType>
    <fullName>again</fullName>
    <active>true</active>
    <label>again</label>
</RecordType>