unpackaged/main/default/objects/Account/recordTypes/Testing_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Testing_Record_Type</fullName>
    <active>true</active>
    <label>Testing Record Type</label>
</RecordType>