unpackaged/main/default/objects/Account/recordTypes/want_to_learn_something_new.recordType-meta.xml
<RecordType>
    <fullName>want_to_learn_something_new</fullName>
    <active>true</active>
    <label>want to learn something new</label>
</RecordType>