unpackaged/main/default/objects/Account/validationRules/annuelRevenueShouldNotBeNegative.validationRule-meta.xml
<ValidationRule>
    <fullName>annuelRevenueShouldNotBeNegative</fullName>
    <active>false</active>
    <errorConditionFormula>AnnualRevenue   &lt;  0  ||  AnnualRevenue   &gt;  100000000000</errorConditionFormula>
    <errorMessage>You should enter a positive value less than 100 billion</errorMessage>
</ValidationRule>