unpackaged/main/default/objects/Account/validationRules/char2AbbreOfBillingCountryRelatedToCA.validationRule-meta.xml
<ValidationRule>
    <fullName>char2AbbreOfBillingCountryRelatedToCA</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
    BillingCountry =&#39;CA&#39; ||  BillingCountry =&#39;CAN&#39;,   
    NOT(LEN( ShippingState )= 2)  , 
    False
    )</errorConditionFormula>
    <errorMessage>YOU SHOUD ADD TWO CHAR ONLY</errorMessage>
</ValidationRule>