unpackaged/main/default/objects/Account/validationRules/putRightNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>putRightNumber</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
     AND(
        CONTAINS( phoneNumber__c , &quot;+91&quot;), 
        LEN( phoneNumber__c ) == 13  ,
        ISBLANK( phoneNumber__c )
       ) 
    )</errorConditionFormula>
    <errorDisplayField>phoneNumber__c</errorDisplayField>
    <errorMessage>please provide correct</errorMessage>
</ValidationRule>